[project]
name = "cta-api"
version = "0.0.1"
authors = [
  { name="Adam Beigel" },
]
description = "A python package to interact with the CTA API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/abeige/cta-api"
Issues = "https://github.com/abeige/cta-api/issues"
